Update app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">pmp-android-sample</string>
+    <string name="app_name">Appier Publisher Service</string>
     <string name="tab_text_sdk">Appier SDK</string>
     <string name="tab_text_mopub_mediation">MoPub Mediation</string>
 </resources>
