--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Appier Publisher Service</string>
+    <string name="zone_300x250">5933</string>
+    <string name="zone_320x50">6241</string>
+    <string name="zone_320x480">6242</string>
 </resources>
