--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="zone_300x250">5933</string>
     <string name="zone_320x50">6241</string>
     <string name="zone_320x480">6242</string>
+    <string name="zone_native">5904</string>
 </resources>
