--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="zone_320x50">6241</string>
     <string name="zone_320x480">6242</string>
     <string name="zone_native">5904</string>
+    <string name="mopub_adunit_banner_300x250">67231ec3ce2f4226a4f7b3ea6eb5ac5a</string>
 </resources>
