--- a/appier-sdk-sample/src/main/res/values/strings.xml
+++ b/appier-sdk-sample/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="zone_native">5904</string>
     <string name="mopub_adunit_banner_300x250">67231ec3ce2f4226a4f7b3ea6eb5ac5a</string>
     <string name="mopub_adunit_native">45ac6e2b9f264107b0089b2af8769afd</string>
+    <string name="mopub_adunit_interstitial">75575be91a91411aa2638db4fa1dbb4e</string>
 </resources>
