--- a/appier-sdk-sample/src/main/res/values/strings.xml
+++ b/appier-sdk-sample/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Appier Publisher Service</string>
+    <string name="aiqua_app_id">6e31153a2f3ea7348717</string>
     <string name="zone_300x250">5933</string>
     <string name="zone_320x50">6241</string>
     <string name="zone_320x480">6242</string>
