--- a/appier-sdk-sample/src/main/res/values/strings.xml
+++ b/appier-sdk-sample/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="mopub_adunit_banner_300x250">67231ec3ce2f4226a4f7b3ea6eb5ac5a</string>
     <string name="mopub_adunit_native">45ac6e2b9f264107b0089b2af8769afd</string>
     <string name="mopub_adunit_interstitial">e3310a327a344e8892eef5a1af6a7c07</string>
+    <string name="mopub_adunit_predict_banner_300x250">c9c43dcdec654d7a86ef0b1316145b66</string>
+    <string name="mopub_zone_predict_banner_300x250">6547</string>
+    <string name="mopub_adunit_predict_native">8c4041f9aea344569df59ffa92e7a907</string>
+    <string name="mopub_zone_predict_native">6546</string>
+    <string name="mopub_adunit_predict_interstitial">6dd11daafe5d4bf3be24ea92b7086df3</string>
+    <string name="mopub_zone_predict_interstitial">6548</string>
 </resources>
