--- a/appier-sdk-sample/src/main/res/values/strings.xml
+++ b/appier-sdk-sample/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
     <string name="ad_unit_320x480">bd26c1e84dec432ab5d931506f741a2b</string>
     <string name="ad_unit_interstitial">d39230a0433743c28a38a176f1797f48</string>
     <string name="ad_unit_native">6d810d9b09ed44efa4ad87ea3ca81780</string>
+    <string name="ad_unit_video">4f19d0ea09c5400db7dc871ce4ab5839</string>
     <string name="zone_300x250">5933</string>
     <string name="zone_320x50">6241</string>
     <string name="zone_320x480">6242</string>
     <string name="zone_interstitial">6242</string>
     <string name="zone_native">5904</string>
+    <string name="zone_video">8803</string>
     <string name="admob_adunit_banner_300x250">ca-app-pub-9553415307894531/2040165788</string>
     <string name="admob_adunit_native">ca-app-pub-9553415307894531/8998108768</string>
     <string name="admob_adunit_interstitial">ca-app-pub-9553415307894531/9106113497</string>
